--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,7 +1,11 @@
+@import 'modules/_mediaqueries.scss';
 @import 'modules/_vars.scss';
+// mixins go here
+@import 'modules/mixins.scss';
+
+// main rukes go here
 @import 'modules/_main.scss';
 @import 'modules/_nav.scss';
-// mixins go here
-@import 'modules/_mixins.scss';
 
-@import 'modules/footer.scss';
+@import 'modules/users.scss';
+@import 'modules/_footer.scss';
