--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,9 +1,18 @@
-nav {
-    color: white;
+nav { 
+    margin: 0;
 
-    li { display: inline-block;
+    .nav-item { 
+        display: inline-block; margin: 0 10px;
 
-        a { cursor: pointer;}
+        background-color: blue;
 
+        @include roundCorners(8px);
+        @include addPadding(5px 12px);
+
+        a { cursor: pointer; text-decoration: none; }
+    }
+
+    :hover {
+        a { color: white; }
     }
 }
