--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,11 +1,11 @@
 @import 'modules/_mediaqueries.scss';
 @import 'modules/_vars.scss';
 // mixins go here
-@import 'modules/mixins.scss';
+@import 'modules/_mixins.scss';
 
-// main rukes go here
+// main rules go here
 @import 'modules/_main.scss';
 @import 'modules/_nav.scss';
+@import 'modules/_users.scss';
 
-@import 'modules/users.scss';
 @import 'modules/_footer.scss';
